[metadata]
description-file = README.md

[tool:pytest]
addopts=--verbose --cov . --cov-report term-missing --cov-report xml  --junitxml=nosetests.xml
timeout=300

[coverage:run]
omit =
  tests/*

[coverage:report]
show_missing=True

[pylint]
reports=yes
max-line-length=120
disable =
  missing-docstring,
  no-name-in-module,
  not-callable,
  locally-disabled,
  duplicate-code,
  file-ignored